# django-downpage

./: .gitignore  LICENCE.txt  Makefile  README.md  setup.cfg  setup.py
downpage/: apps.py  generating.py
downpage/management/commands/: downpagegenerate.py
tests/: test_generating.py
