; vim:ft=dosini:

[metadata]
name = django-downpage
version = attr:downpage.__version__
url = https://github.com/pscl4rke/django-downpage
project_urls =
    Source Code = https://github.com/pscl4rke/django-downpage
    Issues = https://github.com/pscl4rke/django-downpage/issues
    Licence = https://github.com/pscl4rke/django-downpage/blob/master/LICENCE.txt
description = Generate static error pages (502 etc) for when your app is failing
long_description = file:README.md
long_description_content_type = text/markdown
licence = BSD
license = cf:licence
author = P. S. Clarke
author_email = downpage@pscl4rke.net
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP

[options]
python_requires = >=3.8
packages =
    downpage
    downpage.management.commands
install_requires =
    django >= 4

[options.extras_require]
testing =
    coverage

[coverage:run]
source = downpage
